# smiles-encoder

./: .gitignore  README.md  pyproject.toml  setup.py
smiles-encoder/: __init__.py  smiles-encoder.py
smiles_encoder/: __init__.py  encoder.py
tests/: test_encoders.py
